--- a/index.html
+++ b/index.html
@@ -180,7 +180,29 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
-
+<script>
+  var fireballSize;
+  fireballSize = 22;
+  var getFireballSpeed = function(left) {
+    if (left) {
+      return 5;
+    } else {
+      return 2;
+    }
+  };
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
+  var getWizardHeight = function (wizardWidth) {
+    var wizardHeight = 1.337*wizardWidth;
+    return wizardHeight;
+  }
+  var getWizardX = function (width){
+    return width/2;
+  }
+  var getWizardY = function (height){
+    return height/3;
+  }
+</script>
 <script src="js/game.js"></script>
 
 </body>
