--- a/index.html
+++ b/index.html
@@ -181,26 +181,20 @@
   </div>
 </template>
 <script>
-  var fireballSize;
-  fireballSize = 22;
+  var fireballSize = 22;
   var getFireballSpeed = function(left) {
-    if (left) {
-      return 5;
-    } else {
-      return 2;
-    }
+    return left ? 5 : 2;
   };
   var wizardSpeed = 3;
   var wizardWidth = 70;
   var getWizardHeight = function (wizardWidth) {
-    var wizardHeight = 1.337*wizardWidth;
-    return wizardHeight;
+    return 1.337 * wizardWidth;
   }
   var getWizardX = function (width){
-    return width/2;
+    return (width / 2) - (wizardWidth / 2);
   }
   var getWizardY = function (height){
-    return height/3;
+    return height / 3;
   }
 </script>
 <script src="js/game.js"></script>
